--- a/RaoPooja_Self_Project_Cricket_Scorecard.ipynb
+++ b/RaoPooja_Self_Project_Cricket_Scorecard.ipynb
@@ -5176,6 +5176,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#New edit"
+      ],
+      "metadata": {
+        "id": "1ye5DSATxz23"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
